welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:8: error: 'while' expected but identifier found.
      avance()
      ^SlugHunting:10: error: '(' expected but '}' found.
    } while( ! estSurBiscuit())
    ^SlugHunting:10: error: ';' expected but 'while' found.
    } while( ! estSurBiscuit())
      ^SlugHunting:14: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:26: error: Unmatched closing brace '}' ignored here
}
^